--- a/config/locales/devise.en.yml
+++ b/config/locales/devise.en.yml
@@ -2,7 +2,18 @@
 
 en:
   devise:
+    shared:
+      links:
+        login: "Log in"
+        signup: "Sign up"
+        forgot: "Forgot your password?"
+        confirmation: "Didn't receive confirmation instructions?"
+        unlock: "Didn't receive unlock instructions?"
+        signin_with: "Sign in with %{provider}"
     confirmations:
+      new:
+        header: "Resend confirmation instructions"
+        submit: "Resend"
       confirmed: "Your email address has been successfully confirmed."
       send_instructions: "You will receive an email with instructions for how to confirm your email address in a few minutes."
       send_paranoid_instructions: "If your email address exists in our database, you will receive an email with instructions for how to confirm your email address in a few minutes."
@@ -31,12 +42,37 @@ en:
       failure: "Could not authenticate you from %{kind} because \"%{reason}\"."
       success: "Successfully authenticated from %{kind} account."
     passwords:
+      new:
+        header: "Forgot your password?"
+        submit: "Send me reset password instructions"
+      edit:
+        header: "Change your password"
+        submit: "Change my password"
+        new_password: "New password"
+        min_password: "(%{length} characters minimum)"
+        confirm_password: "Confirm new password"
       no_token: "You can't access this page without coming from a password reset email. If you do come from a password reset email, please make sure you used the full URL provided."
       send_instructions: "You will receive an email with instructions on how to reset your password in a few minutes."
       send_paranoid_instructions: "If your email address exists in our database, you will receive a password recovery link at your email address in a few minutes."
       updated: "Your password has been changed successfully. You are now signed in."
       updated_not_active: "Your password has been changed successfully."
     registrations:
+      new:
+        header: "Become a Guru"
+        submit: "Sign up"
+        min_password: "(%{length} characters minimum)"
+      edit:
+        header: "Edit User"
+        password: "(leave blank if you don't want to change it)"
+        min_password: "(%{length} characters minimum)"
+        confirmable: "Currently waiting confirmation for: %{email}"
+        current_password_note: "(we need your current password to confirm your changes)"
+        button_update: "Update"
+        cancel_title: "Cancel my account"
+        unhappy: "Unhappy?"
+        button_cancel: "Cancel my account"
+        confirm_delete: "Are you sure?"
+        link_back: "Back"
       destroyed: "Bye! Your account has been successfully cancelled. We hope to see you again soon."
       signed_up: "Welcome! You have signed up successfully."
       signed_up_but_inactive: "You have signed up successfully. However, we could not sign you in because your account is not yet activated."
@@ -46,6 +82,9 @@ en:
       updated: "Your account has been updated successfully."
       updated_but_not_signed_in: "Your account has been updated successfully, but since your password was changed, you need to sign in again"
     sessions:
+      new:
+        header: "Enter the Guru Gates"
+        submit: "Enter"
       signed_in: "Signed in successfully."
       signed_out: "Signed out successfully."
       already_signed_out: "Signed out successfully."
