--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -69,6 +69,16 @@ en:
       url: "address"
       failure: "An error occurred while saving gist"
 
+  pages:
+    feedback:
+      header: "Feedback"
+      form:
+        email: "Email for answer"
+        message: "Message"
+        button: "Send"
+    send_feedback:
+      success: "Your message has been sent!"
+
   tests_mailer:
     completed_test:
       subject: "You just complrted the TestGuru test!"
@@ -186,8 +196,13 @@ en:
     descr: "A platform for creating and passing tests."
     school: "Educational project in the online school %{link}"
     author: "%{year}, Nikolenko Artem, %{link}"
+    feedback: "Feedback"
 
   api:
     github:
       gist:
         descr: "A question about <%{test}> from TestGuru"
+
+  mailer:
+    feedback:
+      subject: "Message from the site"
