--- a/config/locales/activerecord.ru.yml
+++ b/config/locales/activerecord.ru.yml
@@ -13,6 +13,7 @@ ru:
         title: "Категория"
       test:
         title: "Название"
+        public: "Опубликовано"
         level: "Уровень"
         category_id: "Категория"
       question:
