--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -49,6 +49,12 @@ ru:
       create: "Создать новый <%{title}> Вопрос"
       edit: "Редактировать <%{title}> Вопрос"
 
+  badges:
+    all:
+      header: "Доступные значки"
+    user:
+      header: "Мои значки"
+
   tests:
     index:
       header: "Доступные тесты"
@@ -93,6 +99,32 @@ ru:
     base:
       admin_required:
         alert: "У вас нет прав для просмотра этой страницы."
+    
+    badges:
+      index:
+        header: "Доступные значки"
+        title: "Название"
+        url: "Изображение"
+        actions: "Действия"
+        link_add: "Добавить значок"
+      badge:
+        link_edit: "Редактировать"
+        link_delete: "Удалить"
+        confirm_delete: "Вы уверены?"
+      new:
+        header: "Создать новый значок"
+        link_back: "Назад"
+      create:
+        success: "Тест успешно создан."
+      edit:
+        header: "Редактировать значок"
+        link_back: "Назад"
+      update:
+        success: "Значок успешно обновлен."
+      destroy:
+        success: "Значок %{title} успешно удален."
+      form:
+        notice: "Для внешнего ресурса нужно указать абсолютный путь"
 
     tests:
       new:
@@ -191,8 +223,13 @@ ru:
 
   nav:
     admin: "Админка"
+    badges: "Значки"
+    badges_all: "Все значки"
+    badges_user: "Мои значки"
     gists: "Гисты"
-    welcome: "Приветствую, <b>%{email}</b> Guru"
+    tests: "Тесты"
+    welcome: "Приветствую, <b>%{user}</b> Guru"
+    welcome_admin: "Приветствую, <b>%{user}</b>"
     profile: "Профиль"
     login: "Войти"
     logout: "Выйти"
