--- a/config/locales/activerecord.ru.yml
+++ b/config/locales/activerecord.ru.yml
@@ -24,7 +24,10 @@ ru:
         correct: "Правильный"
       badge:
         title: "Название"
+        active: "Активировать"
+        usage_limit: "Лимит использований"
         url: "Путь к изображению значка"
+        rule: "Правило"
       user:
         email: "Электронная почта"
         password: "Пароль"
