--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -72,7 +72,7 @@ ru:
       button_next: "Дальше"
       gist_question: "Не понятен вопрос"
     result:
-      header: "Тест %{title} успешно завершен!"
+      header: "Тест %{title} завершен!"
       success: "Тест успешно пройден с"
       failed: "Тест провален с"
       button_back: "Назад к тестам"
@@ -106,7 +106,7 @@ ru:
         header: "Доступные значки"
         title: "Название"
         active: "Активно"
-        usage_limit: "Лимит использований"
+        usage_limit: "Лимит<br>использований"
         url: "Изображение"
         actions: "Действия"
         link_add: "Добавить значок"
@@ -129,7 +129,7 @@ ru:
       destroy:
         success: "Значок %{title} успешно удален."
       form:
-        notice_usage_limit: "Сколько раз может применяться этот значок 1 пользователю"
+        notice_usage_limit: "Сколько раз может применяться этот значок 1 пользователю, min: 1, max: 1 000 000"
         notice_url: "Для внешнего ресурса нужно указать абсолютный путь"
         notice_rule: "Как правильно писать правлила смотрите справа/внизу"
 
