--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -43,8 +43,9 @@ ru:
       hard: "тяжелый"
       hero: "геройский"
     publics:
-      published: "Опубликовано"
-      not_published: "Не опубликовано"
+      published: "Да"
+      not_published: "Нет"
+    time_for_test: "%{minutes} мин."
     question:
       create: "Создать новый <%{title}> Вопрос"
       edit: "Редактировать <%{title}> Вопрос"
@@ -61,6 +62,7 @@ ru:
       title: "Название"
       category: "Категория"
       level: "Уровень"
+      time_for_test: "Времени на тест"
       questions: "Вопросы"
       actions: "Действия"
     test:
@@ -71,6 +73,7 @@ ru:
       header: "Пройти тест %{title}"
       button_next: "Дальше"
       gist_question: "Не понятен вопрос"
+      time_left: "На прохождение теста осталось:"
     result:
       header: "Тест %{title} завершен!"
       success: "Тест успешно пройден с"
@@ -147,6 +150,8 @@ ru:
       show:
         title: "Название"
         level: "Уровень"
+        public: "Опубликовано"
+        time_for_test: "Времени на тест"
         actions: "Действия"
         questions: "Вопросы"
         link_create: "Создать вопрос"
@@ -160,6 +165,7 @@ ru:
         category: "Категория"
         public: "Опубликовано"
         level: "Уровень"
+        time_for_test: "Времени на тест"
         questions: "Вопросы"
         actions: "Действия"
         link_add: "Добавить тест"
@@ -173,6 +179,8 @@ ru:
         submit: "Ok"
       update_inline:
         success: "Название теста обновлено"
+      form:
+        notice_time_for_test: "Оставить ноль для теста без учета времени."
 
     questions:
       new:
